Fix Bug 149449 - forward resent-to: mixed fields or KMail incorrectly displays them

BUG: 149449
FIXED-IN: 4.12